# PDF-Editor

./: .gitignore  Cargo.toml  README.github.md  README.md
.claude/skills/verification/: SKILL.md
.github/: RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
deploy/: .env.example  README.md  _wsl_deploy.sh  _wsl_open8050.sh  _wsl_run_probe.sh  _wsl_watch_logs.sh  deploy.sh  deploy_sgsac001.sh  hotfix_body_limit.sh  on56_open_8050.sh  on56_probe_pdf.sh  on56_watch_logs.sh
deploy/linux/: deploy.sh
deploy/windows/: build-msi.ps1  deploy.sh
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: local_api.rs  main.rs
desktop/windows/: main.wxs  zh-TW.wxl
desktop/windows/fragments/: default-pdf.wxs
docs/adr/: ADR-001-workspace-split-pdf-core.md  ADR-002-desktop-shell-tauri-system-webview.md  ADR-003-local-transport-embedded-axum-token.md  ADR-004-file-model-path-session.md  ADR-005-verification-and-release.md  README.md
docs/handoff/: frontend-local-mode.md
mcp-server/: Cargo.toml
mcp-server/src/: main.rs  tools.rs
pdf-core/: Cargo.toml
pdf-core/src/: lib.rs  sidecar.rs  storage.rs
pdf-core/src/pdf/: annots.rs  engine.rs  exportops.rs  font.rs  mod.rs  objects.rs  protect.rs  textedit.rs
python/: convert.py  pyproject.toml  test_convert.py
server/: Cargo.toml
server/src/: lib.rs  llm.rs  main.rs  sidecar.rs  storage.rs
server/src/api/: mod.rs
server/src/pdf/: annots.rs  compare.rs  compress.rs  engine.rs  formbuild.rs  formops.rs  imageops.rs  mod.rs  ops.rs  pageops.rs  protect.rs  textedit.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  app.css
web/src/components/: AnnotLayer.tsx  AnnotPanel.tsx  AnnotToolbar.tsx  CompareDialog.tsx  CompressDialog.tsx  CropBar.tsx  CropLayer.tsx  DecryptPrompt.tsx  DrawingModal.tsx  EncryptDialog.tsx  ExcalidrawCanvas.tsx  ExportDialog.tsx  FieldDialog.tsx  FormBuilderBar.tsx  FormBuilderLayer.tsx  FormLayer.tsx  ImageBar.tsx  ImageLayer.tsx  InsertFromDialog.tsx  PageDialogs.tsx  ProtectDialog.tsx  ResizeDialog.tsx  SearchPanel.tsx  SignaturePad.tsx  StampDrawer.tsx  TextLineLayer.tsx  ThumbnailPanel.tsx  Toolbar.tsx  Viewer.tsx
web/src/lib/: annotGeom.ts  pageSpec.ts
wiki/: API.md  Architecture.md  Backend.md  Deployment.md  Frontend.md  Home.md  Verification.md
