[workspace]
resolver = "2"
members = ["pdf-core", "server", "desktop"]

[workspace.package]
version = "0.3.1"
edition = "2021"

[workspace.dependencies]
pdfium-render = "0.8"
image = "0.25"
lopdf = "0.44.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
zip = "2"

# 全 workspace 共用 release 設定（profile 只在 workspace root 生效）
[profile.release]
lto = true
strip = true
