[package]
name = "pdf-editor-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
pdfium-render = "0.8"
image = "0.25"
dashmap = "6"
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ttf-parser = "0.25.1"
subsetter = "0.2.6"
lopdf = "0.44.0"
lru = "0.12"

[profile.release]
lto = true
strip = true
