[package]
name = "pdf-editor-server"
version.workspace = true
edition.workspace = true

[dependencies]
pdf-core = { path = "../pdf-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
image.workspace = true
lopdf.workspace = true
zip.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
